syntax = "proto3";

package org.example.auth;

option java_multiple_files = true;
option java_package = "org.example.auth.grpc";
option java_outer_classname = "AuthServiceProto";

service AuthService {
    rpc ValidateToken (ValidationRequest) returns (ValidationResponse);
}

//Validate Token Message
message ValidationRequest{
    string accessToken = 1;
}

message ValidationResponse{
    bool isValid = 1;
    bool isRefreshed = 2;
    optional string refreshAccessToken = 3;
}



